--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2131,6 +2131,7 @@ nav.navbar.fixed-top .nav-link {
 }
 .has-feedback .form-control-feedback.with-text {
   position: absolute;
+  z-index: 1;
   right: 5px;
   border-radius: 0 0 5px 5px;
   display: inline-block;
