--- a/static/css/pack/base.css
+++ b/static/css/pack/base.css
@@ -9016,6 +9016,7 @@ nav.navbar.fixed-top .nav-link {
 }
 .has-feedback .form-control-feedback.with-text {
   position: absolute;
+  z-index: 1;
   right: 5px;
   border-radius: 0 0 5px 5px;
   display: inline-block;
